--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ body {
 }
 .container .info {
   margin-top: 7em;
+  margin-bottom: 2em;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
