--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ body {
   }
   .container .header .header-info h1 {
     margin-bottom: 2em;
+    margin-right:5px;
   }
   .container .info {
     width: 80%;
