--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ body {
   }
   .container .header .header-info h1 {
     margin-bottom: 2em;
-    margin-right:5px;
+    margin-right: 0.5em;
   }
   .container .info {
     width: 80%;
