--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,15 @@
+@font-face {
+  font-family: 'Pyidaungsu';
+  src: local('Pyidaungsu'), url('../fonts/Pyidaungsu-2.5_Regular.ttf') format("truetype");
+  -webkit-font-smoothing: antialiased;
+  text-shadow: 0px 0px 1px rgba(255,255,255,0.3);
+  font-weight: normal;
+  font-style: normal;
+}
 body {
   box-sizing: border-box;
   margin: 0;
+  font-family:'Pyidaungsu' !important;
 }
 
 .container {
