--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Pyidaungsu';
-  src: local('Pyidaungsu-2.5_Regular'), url('/fonts/Pyidaungsu-2.5_Regular.ttf') format("truetype");
+  src: local('Pyidaungsu-2.5_Regular'), url('http://htetmyathlaing.me/fonts/Pyidaung-su2.5_Regular.ttf') format("truetype");
   -webkit-font-smoothing: antialiased;
   text-shadow: 0px 0px 1px rgba(255,255,255,0.3);
   font-weight: normal;
